# udp_test_task

./: .gitignore  CMakeLists.txt  README.md  cmake_VS2019.bat  cmake_debug.sh  cmake_release.sh
include/Vms/Core/: Assert.h  Executor.h  Logger.h  Strand.h  TimedTask.h  Types.h
include/common/: config_parser.h  protocol.h
udpclient/: CMakeLists.txt  client.conf  main.cpp  udpclient.cpp  udpclient.h
udpserver/: CMakeLists.txt  main.cpp  server.conf  udpserver.cpp  udpserver.h
vmscore/: Assert.cpp  CMakeLists.txt  Executor.cpp  Logger.cpp
